; ModuleID = '/home/carl/AnghaBench/poco/PDF/src/extr_hpdf_encoder_utf.c_UTF8_Encoder_EncodeText_Func.c'
source_filename = "/home/carl/AnghaBench/poco/PDF/src/extr_hpdf_encoder_utf.c_UTF8_Encoder_EncodeText_Func.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@HPDF_BYTE_TYPE_TRIAL = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32, i8*, i32, i32*)* @UTF8_Encoder_EncodeText_Func to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @UTF8_Encoder_EncodeText_Func(i32 %0, i8* %1, i32 %2, i32* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i64, align 8
  store i32 %0, i32* %5, align 4
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32* %3, i32** %8, align 8
  %15 = load i32, i32* %7, align 4
  %16 = mul nsw i32 %15, 2
  %17 = call i8* @malloc(i32 %16)
  store i8* %17, i8** %9, align 8
  %18 = load i8*, i8** %9, align 8
  store i8* %18, i8** %10, align 8
  %19 = load i32, i32* %5, align 4
  %20 = load i8*, i8** %6, align 8
  %21 = bitcast i8* %20 to i32*
  %22 = load i32, i32* %7, align 4
  %23 = call i32 @HPDF_Encoder_SetParseText(i32 %19, i32* %11, i32* %21, i32 %22)
  store i32 0, i32* %12, align 4
  br label %24

24:                                               ; preds = %44, %4
  %25 = load i32, i32* %12, align 4
  %26 = load i32, i32* %7, align 4
  %27 = icmp slt i32 %25, %26
  br i1 %27, label %28, label %47

28:                                               ; preds = %24
  %29 = load i32, i32* %5, align 4
  %30 = call i64 @HPDF_Encoder_ByteType(i32 %29, i32* %11)
  store i64 %30, i64* %14, align 8
  %31 = load i64, i64* %14, align 8
  %32 = load i64, i64* @HPDF_BYTE_TYPE_TRIAL, align 8
  %33 = icmp ne i64 %31, %32
  br i1 %33, label %34, label %43

34:                                               ; preds = %28
  %35 = load i32, i32* %5, align 4
  %36 = call i32 @HPDF_Encoder_ToUnicode(i32 %35, i32 0)
  store i32 %36, i32* %13, align 4
  %37 = call i32 @HPDF_UInt16Swap(i32* %13)
  %38 = load i8*, i8** %10, align 8
  %39 = bitcast i8* %38 to i32*
  %40 = call i32 @HPDF_MemCpy(i32* %39, i32* %13, i32 2)
  %41 = load i8*, i8** %10, align 8
  %42 = getelementptr inbounds i8, i8* %41, i64 2
  store i8* %42, i8** %10, align 8
  br label %43

43:                                               ; preds = %34, %28
  br label %44

44:                                               ; preds = %43
  %45 = load i32, i32* %12, align 4
  %46 = add nsw i32 %45, 1
  store i32 %46, i32* %12, align 4
  br label %24

47:                                               ; preds = %24
  %48 = load i8*, i8** %10, align 8
  %49 = load i8*, i8** %9, align 8
  %50 = ptrtoint i8* %48 to i64
  %51 = ptrtoint i8* %49 to i64
  %52 = sub i64 %50, %51
  %53 = trunc i64 %52 to i32
  %54 = load i32*, i32** %8, align 8
  store i32 %53, i32* %54, align 4
  %55 = load i8*, i8** %9, align 8
  ret i8* %55
}

declare dso_local i8* @malloc(i32) #1

declare dso_local i32 @HPDF_Encoder_SetParseText(i32, i32*, i32*, i32) #1

declare dso_local i64 @HPDF_Encoder_ByteType(i32, i32*) #1

declare dso_local i32 @HPDF_Encoder_ToUnicode(i32, i32) #1

declare dso_local i32 @HPDF_UInt16Swap(i32*) #1

declare dso_local i32 @HPDF_MemCpy(i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
